color updates to body h1 p

--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -1,8 +1,8 @@
 body {
-	background-color: #458B7A;
+	background-color: #8AB0AB;
 	font-family: Arial, sans-serif;
 }
 
 h1, p {
-	color: #1E2B2D;
+	color: #3E505B;
 }
