--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -46,7 +46,7 @@ nav {
 
 .heading {
 	text-align: center;
-	padding: 1em 0;
+	padding: 1em 0 0;
 }
 
 /*
@@ -81,6 +81,13 @@ add a background image to site - overlay h1 (maybe h2) and social links?
 .about-me {
 	width: 60%;
 	margin: 0 auto;
+	padding: 1em 0;
+}
+
+.about-me h3 {
+	font-family: 'Oswald', sans-serif;
+	font-size: 2em;
+	margin-bottom: .5em;
 }
 
 .column {
