--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -11,6 +11,7 @@ body {
 	background: #FDFDFB;
 	color: #133A65;
 	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
 }
 
 .heading header h1 {
@@ -23,7 +24,7 @@ nav {
 	text-align: center;
 }
 
-.navlinks {
+nav a {
 	color: #ff8800;
 	border-bottom: 1px solid #fff;
 	text-decoration: none;
@@ -36,7 +37,11 @@ nav {
 	transition: color .3s ease-in, border-bottom .3s ease-in;
 }
 
-.navlinks:hover {
+.dropdown .icon {
+    display: none;
+}
+
+nav a:hover {
 	color: #ccc;
 	border-bottom: 1px solid #ccc;
 }
@@ -50,6 +55,19 @@ nav {
 	display: inline;
 }
 
+.fa {
+	color: #133A65;
+	padding: 10px;
+	-webkit-transition: color .3s ease-in;
+	-moz-transition: color .3s ease-in;
+	-o-transition: color .3s ease-in;
+	transition: color .3s ease-in;
+}
+
+.fa:hover {
+	color: #ccc;
+}
+
 /*
 add a background image to site - overlay h1 (maybe h2) and social links?
 .main-header div {
@@ -58,7 +76,7 @@ add a background image to site - overlay h1 (maybe h2) and social links?
 
 
 
-.header-text {
+.heading h1 {
 	font-size: 3em;
 	font-family: 'Oswald', sans-serif;
 }
@@ -79,12 +97,12 @@ add a background image to site - overlay h1 (maybe h2) and social links?
 	margin: 0 auto;
 	padding: 1em 0;
 	border-bottom: 1px solid #ccc;
+	border-top: 1px solid #ccc;
 }
 
 .about-me h3, #portfolio h3 {
 	font-family: 'Oswald', sans-serif;
     font-size: 3em;
-    border-bottom: 1px solid #ccc;
     width: 20%;
     margin: 0 auto;
 }
@@ -121,20 +139,29 @@ add a background image to site - overlay h1 (maybe h2) and social links?
 	padding: 0 4%;
 }
 
-.column {
+.column-wrapper section {
 	width: 27%;
     margin: 0 3%;
-	padding: .5em 0;
+	padding: 1.5em 0;
 	float: left;
 	vertical-align: text-top;
 }
 
-.column img {
+.column-wrapper section img {
 	width: 95%;
 	padding: .5em 0;
+	opacity: 1;
+	-webkit-transition: .3s ease-in-out;
+	-moz-transition: .3s ease-in-out;
+	-o-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
 
-.project-title {
+.column-wrapper section img:hover {
+	opacity: .5;
+}
+
+.column-wrapper section h4 {
 	font-family: 'Oswald', sans-serif;
 	text-transform: uppercase;
 	font-size: 1.5em;
@@ -180,6 +207,7 @@ input[type=text], input[type=email], textarea, select {
 	padding: 8px;
 	border: 1px solid #ff8800;
 	margin: 5px 0;
+	resize: none;
 }
 
 input[type=submit] {
@@ -189,6 +217,8 @@ input[type=submit] {
 .submit {
 	text-align: center;
 }
+
+.fa 
 
 @media only screen and (max-width: 950px) {
 	.about-me h3 {
@@ -228,8 +258,8 @@ input[type=submit] {
 	}
 }
 
-@media only screen and (max-width: 490px) {
-	.header-text {
+@media only screen and (max-width: 550px) {
+	.heading h1 {
 		font-size: 2.25em;
 	}
 	#slogan {
@@ -238,10 +268,34 @@ input[type=submit] {
 	.heading {
 		padding: 2em 0 2em;
 	}
-	.navlinks {
+	nav a {
 		display: block;
 	}
 	.about-me h3 {
 		width: 70%;
 	}
 }
+
+@media screen and (max-width: 550px) {
+	  .dropdown a {display: none;}
+	  .dropdown a.icon {
+	    float: right;
+	    display: block;
+	  }
+}
+
+@media screen and (max-width: 550px) {
+  .dropdown.responsive {position: relative;}
+  .dropdown.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .dropdown.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+
