--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -199,8 +199,12 @@ footer a p {
 .contact {
 	width: 40%;
 	margin: 0 auto;
-	/*background-color: #ccc;*/
+	background-color: #133a65;
 }
+
+/*.contact-page {
+
+}*/
 
 input[type=text], input[type=email], textarea, select {
 	width: 100%;
