--- a/unit_9/css/style.css
+++ b/unit_9/css/style.css
@@ -242,6 +242,15 @@ input[type=submit] {
 	text-align: center;
 }
 
+@media only screen and (min-width:951px) {
+	.contact-us-page ~ footer {
+		position: absolute; 
+		bottom: 0;
+		background-color: #133A65;
+		width: 100%;
+	}
+}
+
 @media only screen and (max-width: 950px) {
 	#about h3 {
 		width: 40%;
